kubernasty/manifests/crust/kubernetes-dashboard/ingresses/kubernetes-dashboard.in.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-https
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: dashboard.${clusterTld}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
  tls:
    - secretName: kubernetes-dashboard-cert-backing-secret
      hosts:
        - dashboard.${clusterTld}
